preserve history property uuid order