@@ -3,6 +3,7 @@ package com.null_codes.hearth.service;
 import com.null_codes.hearth.model.PropertyChange;
 import com.null_codes.hearth.storage.PropertyChangeStore;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Objects;
@@ -56,7 +57,7 @@ public class PropertyChangeManager {
     for (PropertyChange change : changes) {
       propertyUuids.add(change.propertyUuid());
     }
-    return Set.copyOf(propertyUuids);
+    return Collections.unmodifiableSet(propertyUuids);
   }
 
   public List<PropertyChange> getChanges(UUID propertyUuid) {
